# cmake-qt5-scene-item

./: CMakeLists.txt  README.md  debug.h  item.cpp  item.h  main.cpp  rect.h  scene.cpp  scene.h  view.cpp  view.h
